# mos

./: .gitignore  CMakeLists.txt  clean  kernel.lds  objcopy  run
boot/: start.S  vm.c
driver/: gicv2.c  kclock.c  psci.c  uart.c
include/: cap.h  cpu.h  dprintf.h  env.h  error.h  gic.h  kclock.h  kerelf.h  kernel_objects.h  mmio.h  mmu.h  page.h  pcb.h  pmap.h  printf.h  psci.h  queue.h  sched.h  spin_lock.h  syscall.h  syscall_all.h  trap.h  types.h  uart.h  utils.h
init/: main.c
kernel/: cap.c  kernel_elfloader.c  main.c  page.c  pcb.c  print.c  printf.c  sched.c  spin_lock.c  syscall.c  syscall_all.c  trap.c  utils.c
lib/: asm.S  cap.c  cpu.c  env.c  kernel_elfloader.c  pmap.c  printf.c  sched.c  syscall_all.c  trap.c
user/: Makefile  allocator.c  allocator.h  app1.c  app2.c  client.c  entry.S  fktest.c  fork.c  hello.c  idle.c  ipc.c  lib.h  libos.c  mos.h  pingpong.c  proc_client.c  proc_client.h  proc_server.c  proc_server.h  ps.c  ps.h  ps_state.c  ps_state.h  string.c  syscall_lib.c  test0.c  test1.c  test2.c  test3.c  test4.c  u_print.c  u_printf.c  u_syscall.c  u_utils.c  user.lds
